Fixed design on small screen

--- a/app/assets/stylesheets/partials/objects/_menu.scss
+++ b/app/assets/stylesheets/partials/objects/_menu.scss
@@ -43,7 +43,7 @@
 }
 
 $side-menu-width--large: 250px;
-$side-menu-width       : 200px;
+$side-menu-width       : 230px;
 .side-menu {
     &.one-whole { width: 100%; }
     width         : $side-menu-width;
